--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+Changes for v2.02
+-- Alpha --
+- Fix bug that prevented fixed data being tested on download (Graham)
+- Prevent ArrayIndexOutOfBoundsException when loading a .rmir file containing a device upgrade with missing protocol code (Graham)
+
 Changes for v2.01
 -- Alpha --
 - Fix NullPointerException when editing DeviceCombiner protocol (Graham)
