--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,6 +8,9 @@ Changes for v2.02
 - Change format of timing displays in Learned Signal Advanced Details to allow pasting as a timing list into IRScope (Graham)
 - In decoding a learned signal, if a burst index is out of range, treat as zero duration but put error message in Misc column (Graham)
 - Fix bug in recognising keycode key moves when AdvCodeFormat = EFC (Graham)
+-- Alpha 3 --
+- Enhancements to upload/download/memory initializations status
+- Upgrade to jp1usb.dll v0.031
 
 Changes for v2.01
 -- Alpha --
