Save changes to General Notes
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1044 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -12,6 +12,8 @@ Changes for v2.02
 - Enhancements to upload/download/memory initializations status
 - Upgrade to jp1usb.dll v0.031
 - Fix incorrect inclusion of protocol code in exported binary files
+-- Alpha 4 --
+- Save changes to General Notes
 
 Changes for v2.01
 -- Alpha --
