(The first two of these are in update 1057 - I forgot to put a comment) - Change the button texts "Hide Upper" and "Show Upper" to "Expand" and "Collapse" (Graham) - Block the ability to select a protocol when the remote has a different variant of the same protocol built in and there is no Alternate PID (Graham) - Change the display of PFn Details to use drop-down boxes instead of plain text (Graham) - When editing a protocol, enter Manual Settings with the code for processor of current remote selected (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1058 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -50,6 +50,8 @@ Changes for v2.02
 -- Alpha 12
 - Change the button texts "Hide Upper" and "Show Upper" to "Expand" and "Collapse" (Graham)
 - Block the ability to select a protocol when the remote has a different variant of the same protocol built in and there is no Alternate PID (Graham)
+- Change the display of PFn Details to use drop-down boxes instead of plain text (Graham)
+- When editing a protocol, enter Manual Settings with the code for processor of current remote selected (Graham)
 
 Changes for v2.01
 -- Alpha --
