Minor changes to importing protocol upgrades on the Manual Settings Dialog
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1068 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -61,6 +61,7 @@ Changes for v2.02
   - Added NibbleSumChk translator class
   - Incorporated protocols.ini updates
 - Fix loading KM upgrades with Manual Protocols for remotes that use 2-byte pids. (Greg)
+- Show a dialog for entering PB-/KM-/IR- formatted protocol upgrades when the "Import Protocol Upgrade" button is pressed, instead of reading directly from the clipboard. (Greg) 
 
 Changes for v2.01
 -- Alpha --
