--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -61,7 +61,8 @@ Changes for v2.02
   - Added NibbleSumChk translator class
   - Incorporated protocols.ini updates
 - Fix loading KM upgrades with Manual Protocols for remotes that use 2-byte pids. (Greg)
-- Show a dialog for entering PB-/KM-/IR- formatted protocol upgrades when the "Import Protocol Upgrade" button is pressed, instead of reading directly from the clipboard. (Greg) 
+- Show a dialog for entering PB-/KM-/IR- formatted protocol upgrades when the "Import Protocol Upgrade" button is pressed, instead of reading directly from the clipboard. (Greg)
+- Add assembler and protocol builder facilities (Graham) 
 
 Changes for v2.01
 -- Alpha --
