--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -110,6 +110,7 @@ Release build 3
 - Ensure initial "changed" status following a download or file load correctly reflects the hex data state (Graham)
 Release build 4
 - Make consistent the restriction on certain device buttons that do not support key moves on any buttons (Graham)
+- Handle keymoves shared between a real and a virtual device button for remotes with AdvCodeBindFormat=NORMAL (Graham)
 
 Changes for v2.02
 -- Alpha --
