- Add support for user-defined Special Protocols (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1445 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -135,6 +135,8 @@ Release build 10
 - Fix bug preventing protocol deletion when deleting device upgrade in remote with segments (Graham)
 - Add icon column with appropriate functionality to ButtonTableModel (Graham)
 - Fix bug with protocol code not updating correctly when edited in Device Upgrade Editor (Graham)
+Private build 11
+- Add support for user-defined Special Protocols (Graham)
 
 Changes for v2.02
 -- Alpha --
