- Add optional parameters to RC5 Translators and Initializer to support 01C3 RC5 Combo executor (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1455 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -139,6 +139,8 @@ Private build 11
 - Add support for user-defined Special Protocols (Graham)
 Release build 12
 - Add support for multiple OEM signatures to be listed in an RDF [Extender] section (Graham)
+Private build 13
+- Add optional parameters to RC5 Translators and Initializer to support 01C3 RC5 Combo executor (Graham)
 
 Changes for v2.02
 -- Alpha --
