- Make RDF parameter DevCodeOffset operate correctly (Graham) - Fix bug preventing 5-digit EFCs working with External Functions (Graham) - Create a default handling of non-existent map file (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1456 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -141,6 +141,10 @@ Release build 12
 - Add support for multiple OEM signatures to be listed in an RDF [Extender] section (Graham)
 Private build 13
 - Add optional parameters to RC5 Translators and Initializer to support 01C3 RC5 Combo executor (Graham)
+- Fix bug that could leave macros of XSight remotes containing functions from devices that have been deleted; such inconsistent setups could not be saved or loaded (Graham)
+- Make RDF parameter DevCodeOffset operate correctly (Graham)
+- Fix bug preventing 5-digit EFCs working with External Functions (Graham)
+- Create a default handling of non-existent map file (Graham) 
 
 Changes for v2.02
 -- Alpha --
